Use jdbc for valintakoeosallistuminen, simplify data model by removing outdated laskettavahakukohde and laskettavajarjestysnumero